--- a/css/main.css
+++ b/css/main.css
@@ -2611,7 +2611,7 @@ ul.breadcrumb li:last-child {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #ff50f9;
+  background: #9a8ecd;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
