Update from https://github.com/sean0921/sean0921.github.io/commit/74a3107b70319c5ec0480aaa78b41f589ab99b47

--- a/css/main.css
+++ b/css/main.css
@@ -2611,7 +2611,7 @@ ul.breadcrumb li:last-child {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #5918b3;
+  background: #14faa3;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
