Update from https://github.com/sean0921/sean0921.github.io/commit/a8b3268b15b01376f568eeaf4b56a4403a271326

--- a/css/main.css
+++ b/css/main.css
@@ -2611,7 +2611,7 @@ ul.breadcrumb li:last-child {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #cfff2a;
+  background: #410152;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
