Update from https://github.com/sean0921/sean0921.github.io/commit/58558dbcef48cc10e3e37554e09c45acec4d6dab

--- a/css/main.css
+++ b/css/main.css
@@ -2611,7 +2611,7 @@ ul.breadcrumb li:last-child {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #7cfe2b;
+  background: #5dc6ed;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
