--- a/css/main.css
+++ b/css/main.css
@@ -2526,7 +2526,7 @@ ul.breadcrumb li:last-child {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #058674;
+  background: #ec4d87;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
