Update from https://github.com/sean0921/sean0921.github.io/commit/f5e0f435af67d2178471c2df2781ff2bd387878f

--- a/css/main.css
+++ b/css/main.css
@@ -2526,7 +2526,7 @@ ul.breadcrumb li:last-child {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #ec4d87;
+  background: #8e0099;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
