Update from https://github.com/sean0921/sean0921.github.io/commit/815bffdfcaa3542f86ed97f11c70a0ddea033d5c

--- a/css/main.css
+++ b/css/main.css
@@ -2526,7 +2526,7 @@ ul.breadcrumb li:last-child {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #5bdeb5;
+  background: #ba0b11;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
