Update from https://github.com/sean0921/sean0921.github.io/commit/a05837f7fc6db502a35567b4883038e05d66dacc

--- a/css/main.css
+++ b/css/main.css
@@ -2526,7 +2526,7 @@ ul.breadcrumb li:last-child {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #ff01d9;
+  background: #85ffff;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
