Update from https://github.com/sean0921/sean0921.github.io/commit/65a5514c096916ebd348a5edf6517ce2086c37e1

--- a/css/main.css
+++ b/css/main.css
@@ -2634,7 +2634,7 @@ ul.breadcrumb li:last-child {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #71ff87;
+  background: #4bff96;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
