Update from https://github.com/sean0921/sean0921.github.io/commit/8325c5c079b29a56526e891df7f9cd40cc4e9747

--- a/css/main.css
+++ b/css/main.css
@@ -2634,7 +2634,7 @@ ul.breadcrumb li:last-child {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #4bff96;
+  background: #f9790e;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
